ADD: arc & handlers & response/request entities
