# music_entity.go
@@ -6,29 +6,39 @@ import (
 )
 
 type MusicItem struct {
-	Id          int    `json:"id" db:"id"`
-	SongName    string `json:"song" db:"song_name" binding:"required"`
-	GroupName   string `json:"group" db:"group_name" binding:"required"`
-	ReleaseDate time.Time `json:"releaseDate" db:"release_date"`
-	SongText string `json:"text" db:"song_text"`
-	LinkUrl string `json:"link" db:"link_url"`
+	Id          int    		`json:"id" db:"id"`
+	SongName    string 		`json:"song" db:"song_name" binding:"required"`
+	GroupName   string 		`json:"group" db:"group_name" binding:"required"`
+	ReleaseDate time.Time 	`json:"releaseDate" db:"release_date"`
+	SongText 	string 		`json:"text" db:"song_text"`
+	LinkUrl 	string 		`json:"link" db:"link_url"`
 }
 
-type MusicText struct {
-	Couplet string `json:"couplet"`
+type QueryParams struct {
+	SortBy 	string 	`form:"sort_by" binding:"required"`
+	Desc 	bool 	`form:"desc" binding:"required"`
+	Limit 	int 	`form:"limit" binding:"required"`
+}
+
+type CoupletMusicText struct {
+	Couplet 	string 		`json:"couplet"`
 }
 
 type CreateMusicInput struct {
-	SongName    string `json:"song" binding:"required"`
-	GroupName   string `json:"group" binding:"required"`
+	SongName    string 		`json:"song" binding:"required"`
+	GroupName   string 		`json:"group" binding:"required"`
+}
+
+type GetPageMusicItemsResponse struct {
+	Page 		[]MusicItem `json:"page"`
 }
 
 type UpdateMusicInput struct {
-	SongName    *string `json:"song"`
-	GroupName   *string `json:"group"`
-	ReleaseDate *time.Time `json:"releaseDate"`
-	SongText *string `json:"text"`
-	LinkUrl *string `json:"link"`
+	SongName    *string 	`json:"song"`
+	GroupName   *string 	`json:"group"`
+	ReleaseDate *time.Time 	`json:"releaseDate"`
+	SongText 	*string 	`json:"text"`
+	LinkUrl 	*string 	`json:"link"`
 }
 
 func (i UpdateMusicInput) Validate() error {
